[526521] Documentation restructuring and minor fixes
In order to make the help and the website structure closer to each
other, the folder structure was updated and some content and formatting
fixes were added. In general, this should make it easier to maintain the
two outputs from the same source files.

--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Alternative-transformation-methods.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Alternative-transformation-methods.adoc
@@ -2,7 +2,7 @@
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 ifndef::rootdir[:rootdir: ./]
-:imagesdir: {rootdir}/images
+ifndef::imagesdir[{rootdir}/../images]
 
 We provide multiple implementations for the <<CPS-to-Deployment-Transformation#,CPS-to-Deployment M2M transformation>>. The variants differ from each other in at least one characteristics to support comparison and evaluation. Characteristics include:
 
