--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/CPS-to-Deployment-Transformation.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/CPS-to-Deployment-Transformation.adoc
@@ -2,7 +2,7 @@
 
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 ifndef::rootdir[:rootdir: ./]
-:imagesdir: {rootdir}/images
+ifndef::imagesdir[{rootdir}/../images]
 
 ## Specification
 
