--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Generate-CPS-models.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Generate-CPS-models.adoc
@@ -1,7 +1,7 @@
 # Generate CPS models
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 ifndef::rootdir[:rootdir: ./]
-:imagesdir: {rootdir}/images
+ifndef::imagesdir[{rootdir}/../images]
 
 You can generate CPS models with `SampleModelGenerator` class of the `org.eclipse.viatra.query.examples.cps.generator.tests` project.
 
