--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Simple-Xtend-and-Query-M2M-transformation.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Simple-Xtend-and-Query-M2M-transformation.adoc
@@ -1,7 +1,7 @@
 # Simple Xtend and Query M2M transformation
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 ifndef::rootdir[:rootdir: ./]
-:imagesdir: {rootdir}/images
+ifndef::imagesdir[{rootdir}/../images]
 
 ## Introduction
 
