--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/VIATRA-Transformation-API-based-QRT-MTM-Transformation.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/VIATRA-Transformation-API-based-QRT-MTM-Transformation.adoc
@@ -1,7 +1,7 @@
 # VIATRA transformation API based QRT M2M transformation
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 ifndef::rootdir[:rootdir: ./]
-:imagesdir: {rootdir}/images
+ifndef::imagesdir[{rootdir}/../images]
 
 This gives a short introduction on the QRT transformation variant that uses the VIATRA transformation API to define its transformation rules.
 
