--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Deployment-change-monitor.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Deployment-change-monitor.adoc
@@ -1,7 +1,7 @@
 # Deployment Change Monitor
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 ifndef::rootdir[:rootdir: ./]
-:imagesdir: {rootdir}/images
+ifndef::imagesdir[{rootdir}/../images]
 
 This component tracks changes in the deployment model and informs the code generator about the changes.
 
