--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Domains.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/Domains.adoc
@@ -1,13 +1,13 @@
 # Domains
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 ifndef::rootdir[:rootdir: ./]
-:imagesdir: {rootdir}/images
+ifndef::imagesdir[{rootdir}/../images]
 
 ## Cyber Physical System
 
 The CPS domain specifies application and host types and their instances, requests and requirements on applications and resource requirements of applications towards hosts. Application types have a state machine that describes their behavior through states and transitions. Finally, application instances can be allocated to host instances that can communicate with each other.
 
-image::cps_ecore.png[Cyber Physical System model Ecore diagram]
+image::cps/cps_ecore.png[Cyber Physical System model Ecore diagram]
 
 * Host instances have a unique node IP address.
 * Application instances have a unique identifier.
@@ -18,10 +18,10 @@ image::cps_ecore.png[Cyber Physical System model Ecore diagram]
 
 In the deployment model, host instances contain the applications that are running on them, while each application has a behavior with states and transitions. The behavior has a current state and transitions may trigger other transitions when the triggered transition is waiting for the signal they are sending and the application type is correct.
 
-image::deployment_ecore.png[Deployment model Ecore diagram]
+image::cps/deployment_ecore.png[Deployment model Ecore diagram]
 
 ## Traceability
 
 The traceability model describes the correspondence between a CPS and a deployment model. The traceability is stored in a set of traces that refer to zero, one or multiple CPS and deployment elements.
 
-image::traceability_ecore.png[Traceability model Ecore diagram]
+image::cps/traceability_ecore.png[Traceability model Ecore diagram]
