--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/VIATRA-transformation-API-based-batch-M2M-transformation.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/cps/VIATRA-transformation-API-based-batch-M2M-transformation.adoc
@@ -1,7 +1,7 @@
 # VIATRA Transformation API-based Batch M2M Transformation
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 ifndef::rootdir[:rootdir: ./]
-:imagesdir: {rootdir}/images
+ifndef::imagesdir[{rootdir}/../images]
 
 ## Introduction
 
