--- a/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/tutorial/queries.adoc
+++ b/documentation/org.eclipse.viatra.documentation.help/src/main/asciidoc/tutorial/queries.adoc
@@ -1,7 +1,7 @@
 = Using the Query Development Environment
 ifdef::env-github,env-browser[:outfilesuffix: .adoc]
 ifndef::rootdir[:rootdir: ./]
-:imagesdir: {rootdir}/images
+ifndef::imagesdir[{rootdir}/../images]
 :experimental:
 
 Constraints and conditions in the VIATRA framework are expressed using a graph pattern-based language. This declarative formalism allows very compact definitions of complex conditions, while it is still possible to provide live query evaluation based on the Rete algorithm.
@@ -45,7 +45,7 @@ VIATRA includes a view to evaluate the results of queries over various editors, 
 The *Query Results* view is the primary tool for debugging graph patterns. Open the view by selecting _Window/Show View/Query Results_ or you can simply press the kbd:[CTRL+3] shortcut and start to type the name of the view. The view allows loading models and queries, and display (and update) the results of queries automatically. Together with the installed metamodels there is also an example instance model included that will be used in this tutorial as an example.
 
 .Initialize the example CPS demonstrator project
-image::generate_cps_example.png[Generate CPS example]
+image::tutorial/generate_cps_example.png[Generate CPS example]
 
 . Open our example instance model (/org.eclipse.viatra.examples.cps.instances/example.cyberphysicalsystem)
 . Make sure "ReteEngine" is selected in the toolbar of the Query Results view
@@ -56,7 +56,7 @@ image::generate_cps_example.png[Generate CPS example]
 At this point the _Query Results_ view should contain the matches of the freshly created pattern. Using the example model, you can see that there are 6 matches for the pattern, each consisting of a HostInstance-IP address pair. Note that the _Query Results_ view provides live results: by updating the model in the model editor file, e.g. adding a new host instance or changing its IP address, the results update automatically.
 
 .Query Results View
-image::queryresultview.png[Query Results View in Action]
+image::tutorial/queryresultview.png[Query Results View in Action]
 
 NOTE: If the 'Load model from active editor' button is not enabled, it either means, the current editor does not contain a model, or VIATRA does not understand the editor type. By default, EMF tree editors are supported; other editor types, such as graphical editors are supported by additional integration plug-ins, such as the GMF or Graphiti integration available from the VIATRA repository.
 
@@ -222,6 +222,6 @@ pattern sameIpAddress(host1: HostInstance, host2: HostInstance, commonIp : java 
 
 == References
 
-* Pattern Language: https://wiki.eclipse.org/VIATRA/Query/UserDocumentation/QueryLanguage
+* link:query-language.html[Pattern Language]
 * Validation Framework: https://wiki.eclipse.org/VIATRA/Addons/UserDocumentation/Validation
 * Query Based Features: https://wiki.eclipse.org/VIATRA/Addons/UserDocumentation/Query_Based_Features
